[package]
name = "rust-ray"
version = "0.0.1"
edition = "2021"
authors = ["ChristianPav _@christians.email"]
description = "A rust crate for Spatie Ray"
readme = "README.md"
homepage = "https://github.com/amishdev/rust-ray"
repository = "https://github.com/amishdev/rust-ray"
license = "MIT OR Apache-2.0"
keywords = ["ray", "debug"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"]}
